# anchor-state-compression

./: Anchor.toml  package.json
programs/anchor-compressed-notes/: Cargo.toml
programs/anchor-compressed-notes/src/: lib.rs
tests/: anchor-compressed-notes.ts
utils/: utils.ts
