[package]
name = "anchor-compressed-notes"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_compressed_notes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
spl-account-compression = { version="0.1.8", features = ["cpi"] }
solana-program = "=1.14.18"